# sqlCLI

./: .env.example  .gitignore  README.md  pyproject.toml  raul_email.md  setup.sh
data/: dev_answers.json  dev_answers_detailed.json  live_questions.json  live_questions_with_answers.json
src/: agent.py  benchmark.py  cli.py  eval.py  regression.py
